test/functional/directory/gds/ts/gdssetup/lib/valid/no_of_clients_zero.cleanup
# 
# @OSF_COPYRIGHT@
# COPYRIGHT NOTICE
# Copyright (c) 1990, 1991, 1992, 1993, 1994, 1996 Open Software Foundation, Inc.
# ALL RIGHTS RESERVED (DCE).  See the file named COPYRIGHT.DCE for 
# the full copyright text.
#
# 
# HISTORY
# $Log: no_of_clients_zero.cleanup,v $
# Revision 1.1.4.2  1996/03/11  01:35:51  marty
# 	Update copyright years
# 	[1996/03/10  19:38:23  marty]
#
# Revision 1.1.4.1  1995/12/11  16:49:27  root
# 	Submit
# 	[1995/12/11  16:36:36  root]
# 
# Revision 1.1.2.1  1994/08/19  13:55:27  marrek
# 	Improve testcode coverage OT11586.
# 	[1994/08/19  11:43:40  marrek]
# 
# 	Improvement in test code coverage (ot11586).
# 	[1994/08/10  13:10:37  marrek]
# 
# $EndLog$
#
# $RCSfile: no_of_clients_zero.cleanup,v $ $Revision: 1.1.4.2 $ $Date: 1996/03/11 01:35:51 $
#

gdssysadm -fd -p
gdssysadm -fc -m2 -d3 -p
gdssysadm -fA -p
